--- a/app/src/main/res/layout/fragment_connect.xml
+++ b/app/src/main/res/layout/fragment_connect.xml
@@ -35,40 +35,8 @@
             app:titleTextColor="@{viewModel.toolBarTitleAndColor.second}" />
 
 
-        <View
-            android:id="@+id/progress_slider"
-            android:layout_width="0dp"
-            android:layout_height="6dp"
-            android:background="@drawable/gradient_progress"
-            android:visibility="@{viewModel.connectionState == ConnectionState.INIT? View.INVISIBLE: View.VISIBLE}"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
-
-
-        <!--This is for the glow above and below progressbar-->
-        <View
-            android:id="@+id/progress_upper_glow"
-            android:layout_width="0dp"
-            android:layout_height="48dp"
-            app:layout_constraintBottom_toTopOf="@+id/progress_slider"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:visibility="gone" />
-
-        <View
-            android:id="@+id/progress_lower_glow"
-            android:layout_width="0dp"
-            android:layout_height="48dp"
-            android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/progress_slider" />
-
-
         <ImageView
-            android:id="@+id/imageView4"
+            android:id="@+id/iv_background_with_stars"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:scaleType="centerCrop"
@@ -89,9 +57,18 @@
             app:layout_constraintBottom_toTopOf="@+id/tv_connect_action_btn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/progress_slider"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
             app:viewModel="@{viewModel}"
             tools:visibility="visible" />
+
+        <org.torproject.vpn.utils.GradientGlowView
+            android:id="@+id/gradient_view"
+            android:layout_width="0dp"
+            android:layout_height="72dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
         <include
             android:id="@+id/include_error"
@@ -102,7 +79,7 @@
             app:layout_constraintBottom_toTopOf="@+id/tv_connect_action_btn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/progress_slider"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
             app:viewModel="@{viewModel}"
             tools:visibility="gone" />
 
@@ -115,7 +92,7 @@
             app:layout_constraintBottom_toTopOf="@+id/tv_connect_action_btn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/progress_slider"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
             app:viewModel="@{viewModel}"
             tools:visibility="gone" />
 
