--- a/app/src/main/res/layout/app_detail_layout_no_tor_support.xml
+++ b/app/src/main/res/layout/app_detail_layout_no_tor_support.xml
@@ -128,9 +128,10 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_circuit_cards"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:overScrollMode="never"
+            android:scrollbars="none"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/view_circuits_per_app" />
 
