--- a/app/src/main/res/drawable/av_stop_connect.xml
+++ b/app/src/main/res/drawable/av_stop_connect.xml
@@ -4,21 +4,22 @@
 
     <aapt:attr name="android:drawable">
         <vector
-            android:width="183dp"
-            android:height="124dp"
-            android:viewportWidth="183"
-            android:viewportHeight="124">
-            <path
-                android:name="stop-shape"
-                android:fillColor="@color/stop_connect_bg_selector"
-                android:pathData="M71.5,20L111.5,20A24,24 0,0 1,135.5 44L135.5,80A24,24 0,0 1,111.5 104L71.5,104A24,24 0,0 1,47.5 80L47.5,44A24,24 0,0 1,71.5 20z" />
+            android:width="143dp"
+            android:height="88dp"
+            android:viewportWidth="143"
+            android:viewportHeight="88">
 
             <group>
-                <clip-path android:pathData="M73.5,44h36v36h-36z" />
                 <path
-                    android:name="stop-inner-shape"
-                    android:fillColor="@color/redDark"
-                    android:pathData="M85.65,71C84.78,71 84.03,70.69 83.42,70.08C82.81,69.47 82.5,68.72 82.5,67.85L82.5,56.15C82.5,55.28 82.81,54.53 83.42,53.92C84.03,53.31 84.78,53 85.65,53L97.35,53C98.22,53 98.97,53.31 99.58,53.92C100.19,54.53 100.5,55.28 100.5,56.15L100.5,67.85C100.5,68.72 100.19,69.47 99.58,70.08C98.97,70.69 98.22,71 97.35,71L85.65,71Z" />
+                    android:name="stop-shape"
+                    android:pathData="M49.5,0L93.5,0A24,24 0,0 1,117.5 24L117.5,64A24,24 0,0 1,93.5 88L49.5,88A24,24 0,0 1,25.5 64L25.5,24A24,24 0,0 1,49.5 0z"
+                    android:fillColor="@color/red30"/>
+                <group>
+                    <path
+                        android:name="stop-inner-shape"
+                        android:pathData="M65.65,53C64.78,53 64.03,52.69 63.42,52.08C62.81,51.47 62.5,50.72 62.5,49.85L62.5,38.15C62.5,37.28 62.81,36.53 63.42,35.92C64.03,35.31 64.78,35 65.65,35L77.35,35C78.22,35 78.97,35.31 79.58,35.92C80.19,36.53 80.5,37.28 80.5,38.15L80.5,49.85C80.5,50.72 80.19,51.47 79.58,52.08C78.97,52.69 78.22,53 77.35,53L65.65,53Z"
+                        android:fillColor="@color/red80"/>
+                </group>
             </group>
         </vector>
 
@@ -32,30 +33,38 @@
 
                 <objectAnimator
                     android:propertyName="pathData"
-                    android:valueFrom="M71.5,20L111.5,20A24,24 0,0 1,135.5 44L135.5,80A24,24 0,0 1,111.5 104L71.5,104A24,24 0,0 1,47.5 80L47.5,44A24,24 0,0 1,71.5 20z"
-                    android:valueTo="M44,20L139,20A24,24 0,0 1,163 44L163,80A24,24 0,0 1,139 104L44,104A24,24 0,0 1,20 80L20,44A24,24 0,0 1,44 20z"
+                    android:valueFrom="M49.5,0L93.5,0A24,24 0,0 1,117.5 24L117.5,64A24,24 0,0 1,93.5 88L49.5,88A24,24 0,0 1,25.5 64L25.5,24A24,24 0,0 1,49.5 0z"
+                    android:valueTo="M28,0L115,0A28,28 0,0 1,143 28L143,60A28,28 0,0 1,115 88L28,88A28,28 0,0 1,0 60L0,28A28,28 0,0 1,28 0z"
                     android:valueType="pathType" />
 
                 <objectAnimator
                     android:duration="@integer/default_transition_anim_duration"
                     android:propertyName="fillColor"
-                    android:valueFrom="@color/redDarkShade"
-                    android:valueTo="@color/greenNormal" />
+                    android:valueFrom="@color/red30"
+                    android:valueTo="@color/emerald40" />
             </set>
         </aapt:attr>
     </target>
 
 
+
     <target android:name="stop-inner-shape">
         <aapt:attr name="android:animation">
-            <set
-                android:duration="@integer/default_transition_anim_duration"
-                android:interpolator="@android:anim/decelerate_interpolator">
+            <set android:ordering="sequentially">
 
                 <objectAnimator
                     android:duration="@integer/default_transition_anim_duration"
+                    android:interpolator="@android:anim/accelerate_interpolator"
+                    android:propertyName="pathData"
+                    android:valueFrom="M65.65,53C64.78,53 64.03,52.69 63.42,52.08C62.81,51.47 62.5,50.72 62.5,49.85L62.5,38.15C62.5,37.28 62.81,36.53 63.42,35.92C64.03,35.31 64.78,35 65.65,35L77.35,35C78.22,35 78.97,35.31 79.58,35.92C80.19,36.53 80.5,37.28 80.5,38.15L80.5,49.85C80.5,50.72 80.19,51.47 79.58,52.08C78.97,52.69 78.22,53 77.35,53L65.65,53Z"
+                    android:valueTo="M70.85,45C70.75,45 70.67,44.97 70.6,44.9C70.53,44.83 70.5,44.75 70.5,44.65L70.5,43.35C70.5,43.25 70.53,43.17 70.6,43.1C70.67,43.03 70.75,43 70.85,43L72.15,43C72.25,43 72.33,43.03 72.4,43.1C72.47,43.17 72.5,43.25 72.5,43.35L72.5,44.65C72.5,44.75 72.47,44.83 72.4,44.9C72.33,44.97 72.25,45 72.15,45L70.85,45Z"
+                    android:valueType="pathType" />
+
+                <!--duration 50 as we need quick change of visibility of central 2x2 square -->
+                <objectAnimator
+                    android:duration="50"
                     android:propertyName="fillColor"
-                    android:valueFrom="@color/redDark"
+                    android:valueFrom="@color/red80"
                     android:valueTo="@android:color/transparent" />
             </set>
         </aapt:attr>
